hphp/hack/test/typecheck/switch_case_fallthrough_with_break.php.new_exhaustivity.exp
ERROR: File "switch_case_fallthrough_with_break.php", line 12, characters 3-160:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_case_fallthrough_with_break.php", line 12, characters 11-12:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "switch_case_fallthrough_with_break.php", line 24, characters 10-11:
Invalid return type (Typing[4110])
  File "switch_case_fallthrough_with_break.php", line 10, characters 21-21:
  Expected `C`
  File "switch_case_fallthrough_with_break.php", line 15, characters 18-18:
  But got `B`
